--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=3000
 BASE=localhost
-DB_HOST=
-DB_USER=
-DB_PASS=
-DB_NAME=
+DB_HOST=50.116.112.102
+DB_USER=wellsi00_heroku
+DB_PASS=heroku2021
+DB_NAME=wellsi00_heroku
